--- a/ex3/book.ipynb
+++ b/ex3/book.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the scatter plot we can say a few things: A population with less than 40 million people is unlikely to win more than 20 medals in total. Furthermore, a population of greater than one billion is not a guarantee for many medals."
+    "From the scatter plot we can say a few things: A population with less than 40 million people is unlikely to win more than 20 medals in total. Also, countries with a larger population is more likely to win more medals. Furthermore, a population of greater than one billion is not a guarantee for many medals."
    ]
   },
   {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graph we can see that a countries with a higher GDP generally seem to have a higher female/male ratio. "
+    "From the graph we can see that a countries with a higher GDP generally seem to have a higher female/male ratio. At the same time, there is also countries with a low GDP that has a high female/male ratio. The country with the highest female/male ratio (North Korea) also has a relatively low GDP."
    ]
   },
   {
@@ -471,7 +471,7 @@
     "\n",
     "**d. What data do you think that you would need to be able to produce successful forecasts?**\n",
     "\n",
-    "For each beverage you would need data on when it is sold (during what seasons), the cost of producing it and its selling price. It could also be useful to see where the drink is popular and data on the customers who drink each beverage.\n"
+    "For each beverage you would need data on when it is sold (during what seasons), the cost of producing it and its selling price. It could also be useful to see where the drink is popular and data on the customers who drink each beverage (Age, income, etc.).\n"
    ]
   }
  ],
