--- a/a1/book.ipynb
+++ b/a1/book.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Datum</th>\n",
+       "      <th>Tid (UTC)</th>\n",
+       "      <th>Lufttemperatur</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-03-01</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-03-01</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-03-01</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-03-01</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-03-01</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122851</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122852</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122853</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122854</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122855</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>122856 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Datum Tid (UTC)  Lufttemperatur\n",
+       "0       2010-03-01  00:00:00             2.0\n",
+       "1       2010-03-01  01:00:00             2.2\n",
+       "2       2010-03-01  02:00:00             2.2\n",
+       "3       2010-03-01  03:00:00             1.7\n",
+       "4       2010-03-01  04:00:00             1.7\n",
+       "...            ...       ...             ...\n",
+       "122851  2024-01-01  02:00:00             3.9\n",
+       "122852  2024-01-01  03:00:00             3.9\n",
+       "122853  2024-01-01  04:00:00             3.7\n",
+       "122854  2024-01-01  05:00:00             3.6\n",
+       "122855  2024-01-01  06:00:00             3.5\n",
+       "\n",
+       "[122856 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv('SMHI_Dataset/SMHI_Dataset/SMHI_Data.csv')"
+    "df = pd.read_csv('SMHI_Dataset/SMHI_Dataset/SMHI_Data.csv')\n",
+    "df"
    ]
   },
   {
@@ -85,6 +206,54 @@
     "\n",
     "Q6. Rank the overall temperature per month, sort from the coldest to the warmest. List the top ten (10) coldest months in the dataset. Format the\n",
     "output as: YEAR/Month: temp, e.g.“2010/January: -5.0”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Missing values investigation\n",
+    "df.drop_duplicates()\n",
+    "date = None\n",
+    "\n",
+    "duplicates = []\n",
+    "missing_times = []\n",
+    "timestamps = []\n",
+    "\n",
+    "for i, row in df.iterrows(): # Iterate over all rows\n",
+    "    if date is None:\n",
+    "        date = row['Datum']\n",
+    "    time = int(row['Tid (UTC)'][:2]) # Get time from data point\n",
+    "    \n",
+    "    if row['Datum'] != date: # New date found\n",
+    "        for ii in range(24): # Count if all times are included\n",
+    "            counter = timestamps.count(ii)\n",
+    "            if counter == 0:\n",
+    "                missing_times.append(date + \" [\"+ str(ii)+\"]\")\n",
+    "            elif counter > 1:\n",
+    "                duplicates.append(date + \" [\" + str(ii) + \"] (\" + str(counter)+\")\")\n",
+    "        \n",
+    "        date = row['Datum']\n",
+    "        time = int(row['Tid (UTC)'][:2])\n",
+    "        timestamps = [time]\n",
+    "    else:\n",
+    "        timestamps.append(time)\n",
+    "\n",
+    "print(\"Duplicated values:\", len(duplicates))\n",
+    "print(\"Missing values:\", len(missing_times))\n",
+    "\n",
+    "# Save missing times and duplicates info\n",
+    "with open(\"log/log_dup.txt\", 'w') as file:\n",
+    "    for line in duplicates:\n",
+    "        file.write(\"%s\\n\" % line)\n",
+    "\n",
+    "with open(\"log/log_mis.txt\", 'w') as file:\n",
+    "    for line in missing_times:\n",
+    "        file.write(\"%s\\n\" % line)\n",
+    "\n",
+    "    "
    ]
   },
   {
