--- a/a1/book.ipynb
+++ b/a1/book.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as mpl\n",
     "import seaborn as sb\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -156,14 +157,15 @@
        "[122856 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv('SMHI_Dataset/SMHI_Dataset/SMHI_Data.csv')\n",
+    "df_original = pd.read_csv('SMHI_Dataset/SMHI_Dataset/SMHI_Data.csv')\n",
+    "df = df_original.copy()\n",
     "df"
    ]
   },
@@ -185,40 +187,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q1. Explain the data cleaning steps you consider for analyzing the provided dataset. You must motivate and describe why, how, and in which order\n",
-    "you are going to apply the selected steps to the dataset. Note that you should consider applying your proposed data cleaning steps on the dataset\n",
-    "to answer Q2-Q11.\n",
+    "#### Q1\n",
+    "**Explain the data cleaning steps you consider for analyzing the provided dataset. You must motivate and describe why, how, and in which order you are going to apply the selected steps to the dataset. Note that you should consider applying your proposed data cleaning steps on the dataset to answer Q2-Q11.**\n",
     "\n",
-    "Q2. Does the dataset contain any missing values? If so, how many in both absolute terms and percentages? Reflect on the number of missing values.\n",
-    "Do you regard it as much or not?\n",
+    "Firstly we will look at the dataset and remove all duplicates in it. Then we want to remove all the missing values. Some missing values have an entry in the csv-file, but is missing the temperature data, while some timestamps are not found at all in the data. The strategy here is to insert all timestamps that are missing, with no temperature data, and then add an estimated temperature for every missing instance.\n",
     "\n",
-    "Q3. Which strategy was used for handling the missing values? Motivate why you consider the selected strategy the most suitable for this task.\n",
+    "#### Q3\n",
+    "**Which strategy was used for handling the missing values? Motivate why you consider the selected strategy the most suitable for this task.**\n",
     "\n",
-    "Q4. Calculate the following statistics for the air temperature values in the dataset:\n",
-    "•minimum value\n",
-    "•maximum value\n",
-    "•sample mean\n",
-    "•Q1/Q2/Q3 quartiles\n",
-    "•sample standard deviation\n",
-    "•95% confidence interval of the mean\n",
+    "#### Q5\n",
+    "**Plot all available air temperature data as a line plot with dates on the x-axis.**\n",
     "\n",
-    "Q5. Plot all available air temperature data as a line plot with dates on the x-axis. \n",
+    "#### Q6\n",
+    "**Rank the overall temperature per month, sort from the coldest to the warmest. List the top ten (10) coldest months in the dataset. Format the output as: YEAR/Month: temp, e.g.“2010/January: -5.0”**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Q2\n",
+    "**Does the dataset contain any missing values? If so, how many in both absolute terms and percentages? Reflect on the number of missing values. Do you regard it as much or not?**\n",
     "\n",
-    "Q6. Rank the overall temperature per month, sort from the coldest to the warmest. List the top ten (10) coldest months in the dataset. Format the\n",
-    "output as: YEAR/Month: temp, e.g.“2010/January: -5.0”"
+    "### Find missing timestamps\n",
+    "\n",
+    "Out first step is to look at every row in the dataset, and find if any timestamp is missing from it. For example if for a date, the time 00:00:00 and 02:00:00 exists, but not 01:00:00. We also add all the timestamps that are missing to the dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing timestamps: 694\n"
+     ]
+    }
+   ],
    "source": [
-    "# Missing values investigation\n",
-    "df.drop_duplicates()\n",
+    "# # Missing values investigation\n",
+    "df = df.drop_duplicates().reset_index(drop=True)\n",
     "date = None\n",
     "\n",
-    "duplicates = []\n",
     "missing_times = []\n",
     "timestamps = []\n",
     "\n",
@@ -230,37 +250,158 @@
     "    if row['Datum'] != date: # New date found\n",
     "        for ii in range(24): # Count if all times are included\n",
     "            counter = timestamps.count(ii)\n",
-    "            if counter == 0:\n",
-    "                missing_times.append(date + \" [\"+ str(ii)+\"]\")\n",
-    "            elif counter > 1:\n",
-    "                duplicates.append(date + \" [\" + str(ii) + \"] (\" + str(counter)+\")\")\n",
-    "        \n",
+    "            if counter == 0: # Time not found, add to missing_times\n",
+    "                missing_times.append(date + \",\"+ str(ii))\n",
     "        date = row['Datum']\n",
     "        time = int(row['Tid (UTC)'][:2])\n",
     "        timestamps = [time]\n",
     "    else:\n",
     "        timestamps.append(time)\n",
     "\n",
-    "print(\"Duplicated values:\", len(duplicates))\n",
-    "print(\"Missing values:\", len(missing_times))\n",
+    "print(\"Missing timestamps:\", len(missing_times))\n",
     "\n",
-    "# Save missing times and duplicates info\n",
-    "with open(\"log/log_dup.txt\", 'w') as file:\n",
-    "    for line in duplicates:\n",
-    "        file.write(\"%s\\n\" % line)\n",
+    "for m in missing_times: # Add missing timestamps to dataframe\n",
+    "    date, time = m.split(',')\n",
+    "    timestring = \"\"\n",
+    "    if len(time) < 2:\n",
+    "        timestring += \"0\"+time\n",
+    "    else:\n",
+    "        timestring += time\n",
+    "    timestring+=\":00:00\"\n",
+    "    df.loc[len(df)] = [date,timestring,None]\n",
     "\n",
-    "with open(\"log/log_mis.txt\", 'w') as file:\n",
-    "    for line in missing_times:\n",
-    "        file.write(\"%s\\n\" % line)\n",
-    "\n",
-    "    "
+    "df.sort_values(by=['Datum','Tid (UTC)'], inplace=True)\n",
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
+    "We found and added a total of 694 missing timestamps.\n",
+    "\n",
+    "### Missing temperature values\n",
+    "Now we look for instances where the temperature data is missing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NaN temperatures: 7931\n",
+      "NaN temperatures percentage: 6.54 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "na_values = df.isna().sum() # Count NaN values for each column\n",
+    "na_temp = na_values['Lufttemperatur']\n",
+    "na_p = round(100*(na_temp/len(df)),2)\n",
+    "\n",
+    "print(\"NaN temperatures:\",na_temp)\n",
+    "print(\"NaN temperatures percentage:\",na_p, '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimating missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimate(index):\n",
+    "    i = index - 24\n",
+    "    before = []\n",
+    "    after = []\n",
+    "    while i > 0 and len(before) < 3:\n",
+    "        temp = df.iloc[i]['Lufttemperatur']\n",
+    "        if not math.isnan(temp):\n",
+    "            before.append(temp)\n",
+    "        i-=24\n",
+    "        \n",
+    "    i = index + 24\n",
+    "    while i < len(df) and len(after) < 3:\n",
+    "        temp = df.iloc[i]['Lufttemperatur']\n",
+    "        if not math.isnan(temp):\n",
+    "            after.append(temp)\n",
+    "        i+=24\n",
+    "        \n",
+    "    all_temps = []\n",
+    "    all_temps.extend(before)\n",
+    "    all_temps.extend(after)\n",
+    "    \n",
+    "    mean = round(sum(all_temps)/len(all_temps),1)\n",
+    "    return mean\n",
+    "\n",
+    "for i, row in df.iterrows():\n",
+    "    if math.isnan(row['Lufttemperatur']):\n",
+    "        date = row['Datum']\n",
+    "        before = df.iloc[i-1]['Lufttemperatur']\n",
+    "        after = df.iloc[i+1]['Lufttemperatur']\n",
+    "        \n",
+    "        if math.isnan(after):\n",
+    "            after = estimate(i)\n",
+    "        mean = round((before+after)/2,1)\n",
+    "        df.loc[i,'Lufttemperatur'] = mean\n",
+    "        \n",
+    "df.to_csv('data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "#### Q4\n",
+    "\n",
+    "**Calculate the following statistics for the air temperature values in the dataset: minimum value, maximum value, sample mean, Q1/Q2/Q3 quartiles, sample standard deviation, 95% confidence interval of the mean**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min: -19.2\n",
+      "Mean: 38.6\n",
+      "Mean: 9.435\n",
+      "\n",
+      "Quartiles:\n",
+      "Q1 (25%): 4.1\n",
+      "Q2 (50%): 9.1\n",
+      "Q3 (75%): 15.3\n",
+      "\n",
+      "Standard deviation 6.978\n"
+     ]
+    }
+   ],
+   "source": [
+    "temps = df_original['Lufttemperatur']\n",
+    "print(\"Min:\",temps.min())\n",
+    "print(\"Mean:\",temps.max())\n",
+    "print(\"Mean:\",round(temps.mean(),3))\n",
+    "\n",
+    "print(\"\\nQuartiles:\")\n",
+    "print(\"Q1 (25%):\",temps.quantile(0.25))\n",
+    "print(\"Q2 (50%):\",temps.quantile(0.5))\n",
+    "print(\"Q3 (75%):\",temps.quantile(0.75))\n",
+    "\n",
+    "print(\"\\nStandard deviation\",round(temps.std(),3))\n"
    ]
   },
   {
