--- a/a1/book.ipynb
+++ b/a1/book.ipynb
@@ -527,525 +527,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outliers:  205\n",
-      "34.1  -  25.1\n",
-      "9.0\n",
-      "2010-07-11 09:00:00\n",
-      "26.8  -  34.1\n",
-      "7.300000000000001\n",
-      "2010-07-11 10:00:00\n",
-      "36.9  -  28.5\n",
-      "8.399999999999999\n",
-      "2010-07-11 14:00:00\n",
-      "27.1  -  36.4\n",
-      "9.299999999999997\n",
-      "2010-07-11 16:00:00\n",
-      "35.2  -  26.5\n",
-      "8.700000000000003\n",
-      "2010-07-11 18:00:00\n",
-      "23.8  -  35.2\n",
-      "11.400000000000002\n",
-      "2010-07-11 19:00:00\n",
-      "36.3  -  25.4\n",
-      "10.899999999999999\n",
-      "2010-07-13 10:00:00\n",
-      "25.9  -  36.3\n",
-      "10.399999999999999\n",
-      "2010-07-13 11:00:00\n",
-      "34.0  -  24.1\n",
-      "9.899999999999999\n",
-      "2010-07-22 16:00:00\n",
-      "24.1  -  34.0\n",
-      "9.899999999999999\n",
-      "2010-07-22 17:00:00\n",
-      "-10.8  -  -19.2\n",
-      "8.399999999999999\n",
-      "2010-12-22 09:00:00\n",
-      "34.3  -  24.8\n",
-      "9.499999999999996\n",
-      "2012-07-27 14:00:00\n",
-      "22.4  -  34.3\n",
-      "11.899999999999999\n",
-      "2012-07-27 15:00:00\n",
-      "34.7  -  23.9\n",
-      "10.800000000000004\n",
-      "2013-08-06 11:00:00\n",
-      "24.6  -  34.7\n",
-      "10.100000000000001\n",
-      "2013-08-06 12:00:00\n",
-      "35.4  -  25.4\n",
-      "10.0\n",
-      "2014-07-09 11:00:00\n",
-      "26.2  -  35.4\n",
-      "9.2\n",
-      "2014-07-09 12:00:00\n",
-      "35.6  -  25.9\n",
-      "9.700000000000003\n",
-      "2014-07-10 13:00:00\n",
-      "26.3  -  35.8\n",
-      "9.499999999999996\n",
-      "2014-07-10 15:00:00\n",
-      "34.7  -  25.3\n",
-      "9.400000000000002\n",
-      "2014-07-21 13:00:00\n",
-      "25.2  -  34.7\n",
-      "9.500000000000004\n",
-      "2014-07-21 14:00:00\n",
-      "34.0  -  25.1\n",
-      "8.899999999999999\n",
-      "2014-07-21 16:00:00\n",
-      "24.7  -  34.0\n",
-      "9.3\n",
-      "2014-07-21 17:00:00\n",
-      "34.0  -  25.2\n",
-      "8.8\n",
-      "2014-07-23 11:00:00\n",
-      "25.5  -  34.0\n",
-      "8.5\n",
-      "2014-07-23 12:00:00\n",
-      "35.6  -  25.9\n",
-      "9.700000000000003\n",
-      "2014-07-23 14:00:00\n",
-      "26.4  -  35.6\n",
-      "9.200000000000003\n",
-      "2014-07-23 15:00:00\n",
-      "37.3  -  26.0\n",
-      "11.299999999999997\n",
-      "2014-07-24 11:00:00\n",
-      "27.9  -  37.3\n",
-      "9.399999999999999\n",
-      "2014-07-24 12:00:00\n",
-      "37.8  -  27.6\n",
-      "10.199999999999996\n",
-      "2014-07-24 14:00:00\n",
-      "27.9  -  37.8\n",
-      "9.899999999999999\n",
-      "2014-07-24 15:00:00\n",
-      "37.5  -  27.6\n",
-      "9.899999999999999\n",
-      "2014-07-25 11:00:00\n",
-      "27.2  -  37.5\n",
-      "10.3\n",
-      "2014-07-25 12:00:00\n",
-      "36.9  -  27.2\n",
-      "9.7\n",
-      "2014-07-25 13:00:00\n",
-      "27.3  -  36.9\n",
-      "9.599999999999998\n",
-      "2014-07-25 14:00:00\n",
-      "36.4  -  27.3\n",
-      "9.099999999999998\n",
-      "2014-07-25 15:00:00\n",
-      "26.3  -  36.4\n",
-      "10.099999999999998\n",
-      "2014-07-25 16:00:00\n",
-      "34.7  -  26.9\n",
-      "7.800000000000004\n",
-      "2014-07-26 10:00:00\n",
-      "23.6  -  34.7\n",
-      "11.100000000000001\n",
-      "2014-07-26 11:00:00\n",
-      "34.5  -  24.7\n",
-      "9.8\n",
-      "2014-07-27 09:00:00\n",
-      "36.9  -  26.0\n",
-      "10.899999999999999\n",
-      "2014-07-28 11:00:00\n",
-      "36.4  -  27.4\n",
-      "9.0\n",
-      "2014-07-28 14:00:00\n",
-      "25.7  -  36.4\n",
-      "10.7\n",
-      "2014-07-28 15:00:00\n",
-      "34.8  -  26.1\n",
-      "8.699999999999996\n",
-      "2014-07-29 12:00:00\n",
-      "25.1  -  34.8\n",
-      "9.699999999999996\n",
-      "2014-07-29 13:00:00\n",
-      "34.4  -  25.4\n",
-      "9.0\n",
-      "2014-08-03 08:00:00\n",
-      "26.2  -  34.4\n",
-      "8.2\n",
-      "2014-08-03 09:00:00\n",
-      "37.1  -  27.8\n",
-      "9.3\n",
-      "2014-08-03 16:00:00\n",
-      "26.9  -  37.1\n",
-      "10.200000000000003\n",
-      "2014-08-03 17:00:00\n",
-      "35.4  -  26.2\n",
-      "9.2\n",
-      "2014-08-03 19:00:00\n",
-      "26.0  -  35.4\n",
-      "9.399999999999999\n",
-      "2014-08-03 20:00:00\n",
-      "34.0  -  22.4\n",
-      "11.600000000000001\n",
-      "2015-07-04 08:00:00\n",
-      "24.3  -  34.0\n",
-      "9.7\n",
-      "2015-07-04 09:00:00\n",
-      "35.8  -  23.7\n",
-      "12.099999999999998\n",
-      "2015-07-05 07:00:00\n",
-      "24.6  -  35.8\n",
-      "11.199999999999996\n",
-      "2015-07-05 08:00:00\n",
-      "34.5  -  24.0\n",
-      "10.5\n",
-      "2015-08-07 10:00:00\n",
-      "25.1  -  34.5\n",
-      "9.399999999999999\n",
-      "2015-08-07 11:00:00\n",
-      "35.5  -  27.5\n",
-      "8.0\n",
-      "2016-06-25 14:00:00\n",
-      "26.1  -  35.5\n",
-      "9.399999999999999\n",
-      "2016-06-25 15:00:00\n",
-      "34.8  -  26.3\n",
-      "8.499999999999996\n",
-      "2016-06-25 17:00:00\n",
-      "24.7  -  34.8\n",
-      "10.099999999999998\n",
-      "2016-06-25 18:00:00\n",
-      "24.7  -  34.3\n",
-      "9.599999999999998\n",
-      "2018-06-03 14:00:00\n",
-      "34.7  -  23.6\n",
-      "11.100000000000001\n",
-      "2018-07-16 08:00:00\n",
-      "26.5  -  34.7\n",
-      "8.200000000000003\n",
-      "2018-07-16 09:00:00\n",
-      "35.0  -  27.7\n",
-      "7.300000000000001\n",
-      "2018-07-16 15:00:00\n",
-      "38.6  -  25.6\n",
-      "13.0\n",
-      "2018-07-17 10:00:00\n",
-      "27.9  -  35.5\n",
-      "7.600000000000001\n",
-      "2018-07-17 12:00:00\n",
-      "34.4  -  26.6\n",
-      "7.799999999999997\n",
-      "2018-07-21 12:00:00\n",
-      "24.7  -  34.0\n",
-      "9.3\n",
-      "2018-07-21 15:00:00\n",
-      "35.4  -  24.7\n",
-      "10.7\n",
-      "2018-07-21 17:00:00\n",
-      "25.1  -  35.4\n",
-      "10.299999999999997\n",
-      "2018-07-21 18:00:00\n",
-      "36.9  -  26.7\n",
-      "10.2\n",
-      "2018-07-26 09:00:00\n",
-      "26.5  -  37.0\n",
-      "10.5\n",
-      "2018-07-26 11:00:00\n",
-      "35.8  -  24.8\n",
-      "10.999999999999996\n",
-      "2018-07-27 08:00:00\n",
-      "26.5  -  35.8\n",
-      "9.299999999999997\n",
-      "2018-07-27 09:00:00\n",
-      "37.0  -  26.5\n",
-      "10.5\n",
-      "2018-07-27 10:00:00\n",
-      "36.6  -  27.4\n",
-      "9.200000000000003\n",
-      "2018-07-27 13:00:00\n",
-      "26.9  -  36.6\n",
-      "9.700000000000003\n",
-      "2018-07-27 14:00:00\n",
-      "37.0  -  27.0\n",
-      "10.0\n",
-      "2018-07-27 16:00:00\n",
-      "27.0  -  37.0\n",
-      "10.0\n",
-      "2018-07-27 17:00:00\n",
-      "36.2  -  27.0\n",
-      "9.200000000000003\n",
-      "2018-07-27 18:00:00\n",
-      "25.8  -  36.2\n",
-      "10.400000000000002\n",
-      "2018-07-27 19:00:00\n",
-      "34.3  -  25.8\n",
-      "8.499999999999996\n",
-      "2018-07-27 20:00:00\n",
-      "24.4  -  34.3\n",
-      "9.899999999999999\n",
-      "2018-07-27 21:00:00\n",
-      "35.5  -  26.2\n",
-      "9.3\n",
-      "2018-07-28 09:00:00\n",
-      "35.0  -  25.7\n",
-      "9.3\n",
-      "2018-07-28 15:00:00\n",
-      "25.5  -  35.0\n",
-      "9.5\n",
-      "2018-07-28 16:00:00\n",
-      "37.5  -  25.1\n",
-      "12.399999999999999\n",
-      "2018-07-29 11:00:00\n",
-      "27.2  -  37.5\n",
-      "10.3\n",
-      "2018-07-29 12:00:00\n",
-      "36.7  -  26.4\n",
-      "10.300000000000004\n",
-      "2018-07-29 14:00:00\n",
-      "26.4  -  36.7\n",
-      "10.300000000000004\n",
-      "2018-07-29 15:00:00\n",
-      "38.1  -  26.4\n",
-      "11.700000000000003\n",
-      "2018-07-29 16:00:00\n",
-      "25.5  -  38.1\n",
-      "12.600000000000001\n",
-      "2018-07-29 17:00:00\n",
-      "35.9  -  26.2\n",
-      "9.7\n",
-      "2018-07-30 12:00:00\n",
-      "26.2  -  35.9\n",
-      "9.7\n",
-      "2018-07-30 13:00:00\n",
-      "36.3  -  26.3\n",
-      "9.999999999999996\n",
-      "2018-07-30 16:00:00\n",
-      "25.5  -  35.5\n",
-      "10.0\n",
-      "2018-07-30 18:00:00\n",
-      "37.3  -  28.3\n",
-      "8.999999999999996\n",
-      "2018-07-31 14:00:00\n",
-      "26.7  -  36.9\n",
-      "10.2\n",
-      "2018-07-31 16:00:00\n",
-      "35.4  -  27.0\n",
-      "8.399999999999999\n",
-      "2018-08-01 18:00:00\n",
-      "25.1  -  35.4\n",
-      "10.299999999999997\n",
-      "2018-08-01 19:00:00\n",
-      "34.8  -  24.8\n",
-      "9.999999999999996\n",
-      "2018-08-02 08:00:00\n",
-      "25.6  -  34.8\n",
-      "9.199999999999996\n",
-      "2018-08-02 09:00:00\n",
-      "35.6  -  24.9\n",
-      "10.700000000000003\n",
-      "2018-08-02 11:00:00\n",
-      "25.8  -  35.0\n",
-      "9.2\n",
-      "2018-08-02 13:00:00\n",
-      "37.3  -  25.8\n",
-      "11.499999999999996\n",
-      "2018-08-02 14:00:00\n",
-      "27.3  -  37.3\n",
-      "9.999999999999996\n",
-      "2018-08-02 15:00:00\n",
-      "36.2  -  27.3\n",
-      "8.900000000000002\n",
-      "2018-08-02 16:00:00\n",
-      "26.6  -  36.2\n",
-      "9.600000000000001\n",
-      "2018-08-02 17:00:00\n",
-      "26.1  -  34.7\n",
-      "8.600000000000001\n",
-      "2018-08-03 12:00:00\n",
-      "35.5  -  26.1\n",
-      "9.399999999999999\n",
-      "2018-08-03 13:00:00\n",
-      "25.7  -  35.5\n",
-      "9.8\n",
-      "2018-08-03 14:00:00\n",
-      "35.2  -  26.1\n",
-      "9.100000000000001\n",
-      "2018-08-03 19:00:00\n",
-      "25.1  -  35.2\n",
-      "10.100000000000001\n",
-      "2018-08-03 20:00:00\n",
-      "35.8  -  25.8\n",
-      "9.999999999999996\n",
-      "2018-08-04 12:00:00\n",
-      "26.7  -  35.8\n",
-      "9.099999999999998\n",
-      "2018-08-04 13:00:00\n",
-      "36.6  -  26.1\n",
-      "10.5\n",
-      "2018-08-04 17:00:00\n",
-      "26.0  -  36.6\n",
-      "10.600000000000001\n",
-      "2018-08-04 18:00:00\n",
-      "34.4  -  25.5\n",
-      "8.899999999999999\n",
-      "2018-08-08 11:00:00\n",
-      "25.4  -  34.4\n",
-      "9.0\n",
-      "2018-08-08 12:00:00\n",
-      "36.3  -  26.4\n",
-      "9.899999999999999\n",
-      "2018-08-08 19:00:00\n",
-      "35.2  -  25.3\n",
-      "9.900000000000002\n",
-      "2019-06-26 18:00:00\n",
-      "25.3  -  35.2\n",
-      "9.900000000000002\n",
-      "2019-06-26 19:00:00\n",
-      "34.3  -  25.8\n",
-      "8.499999999999996\n",
-      "2019-07-26 11:00:00\n",
-      "24.8  -  34.3\n",
-      "9.499999999999996\n",
-      "2019-07-26 12:00:00\n",
-      "35.6  -  25.7\n",
-      "9.900000000000002\n",
-      "2020-06-26 12:00:00\n",
-      "26.6  -  35.6\n",
-      "9.0\n",
-      "2020-06-26 13:00:00\n",
-      "35.1  -  26.8\n",
-      "8.3\n",
-      "2020-08-17 12:00:00\n",
-      "25.7  -  35.1\n",
-      "9.400000000000002\n",
-      "2020-08-17 13:00:00\n",
-      "34.0  -  24.5\n",
-      "9.5\n",
-      "2021-06-19 13:00:00\n",
-      "23.5  -  34.0\n",
-      "10.5\n",
-      "2021-06-19 14:00:00\n",
-      "35.8  -  25.7\n",
-      "10.099999999999998\n",
-      "2021-07-13 12:00:00\n",
-      "25.4  -  35.8\n",
-      "10.399999999999999\n",
-      "2021-07-13 13:00:00\n",
-      "35.0  -  25.4\n",
-      "9.600000000000001\n",
-      "2021-07-13 14:00:00\n",
-      "25.5  -  35.0\n",
-      "9.5\n",
-      "2021-07-13 15:00:00\n",
-      "34.5  -  25.5\n",
-      "9.0\n",
-      "2021-07-14 17:00:00\n",
-      "24.3  -  34.5\n",
-      "10.2\n",
-      "2021-07-14 18:00:00\n",
-      "36.3  -  27.2\n",
-      "9.099999999999998\n",
-      "2021-07-16 12:00:00\n",
-      "21.6  -  36.3\n",
-      "14.699999999999996\n",
-      "2021-07-16 13:00:00\n",
-      "34.8  -  24.1\n",
-      "10.699999999999996\n",
-      "2021-07-26 10:00:00\n",
-      "25.5  -  34.8\n",
-      "9.299999999999997\n",
-      "2021-07-26 11:00:00\n",
-      "24.1  -  34.8\n",
-      "10.699999999999996\n",
-      "2022-06-26 14:00:00\n",
-      "35.0  -  24.4\n",
-      "10.600000000000001\n",
-      "2022-06-27 08:00:00\n",
-      "24.5  -  35.0\n",
-      "10.5\n",
-      "2022-06-27 09:00:00\n",
-      "34.3  -  25.2\n",
-      "9.099999999999998\n",
-      "2022-08-04 10:00:00\n",
-      "23.9  -  34.3\n",
-      "10.399999999999999\n",
-      "2022-08-04 11:00:00\n",
-      "35.1  -  24.9\n",
-      "10.200000000000003\n",
-      "2022-08-14 13:00:00\n",
-      "24.8  -  34.7\n",
-      "9.900000000000002\n",
-      "2022-08-14 15:00:00\n",
-      "34.4  -  25.1\n",
-      "9.299999999999997\n",
-      "2022-08-15 11:00:00\n",
-      "25.1  -  34.4\n",
-      "9.299999999999997\n",
-      "2022-08-15 12:00:00\n",
-      "34.1  -  25.6\n",
-      "8.5\n",
-      "2022-08-15 14:00:00\n",
-      "24.3  -  34.1\n",
-      "9.8\n",
-      "2022-08-15 15:00:00\n",
-      "35.5  -  25.5\n",
-      "10.0\n",
-      "2022-08-19 12:00:00\n",
-      "26.3  -  35.5\n",
-      "9.2\n",
-      "2022-08-19 13:00:00\n",
-      "34.5  -  25.7\n",
-      "8.8\n",
-      "2022-08-19 16:00:00\n",
-      "24.6  -  34.5\n",
-      "9.899999999999999\n",
-      "2022-08-19 17:00:00\n",
-      "35.2  -  25.2\n",
-      "10.000000000000004\n",
-      "2022-08-27 12:00:00\n",
-      "25.3  -  35.2\n",
-      "9.900000000000002\n",
-      "2022-08-27 13:00:00\n",
-      "158\n"
+      "Outliers:  205\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Time  Lufttemperatur\n",
+      "0  2010-07-11 09:00:00            34.1\n",
+      "1  2010-07-11 18:00:00            35.2\n",
+      "2  2010-07-13 10:00:00            36.3\n",
+      "3  2010-07-22 16:00:00            34.0\n",
+      "4  2010-12-22 08:00:00           -19.2\n",
+      "..                 ...             ...\n",
+      "80 2022-08-15 11:00:00            34.4\n",
+      "81 2022-08-15 14:00:00            34.1\n",
+      "82 2022-08-19 12:00:00            35.5\n",
+      "83 2022-08-19 16:00:00            34.5\n",
+      "84 2022-08-27 12:00:00            35.2\n",
+      "\n",
+      "[85 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "# fig_o = mpl.figure(figsize=(14,1))\n",
-    "# ax = fig_o.add_subplot(1,1,1)\n",
-    "# ax.boxplot(df['Lufttemperatur'], vert=False)\n",
-    "# mpl.show()\n",
-    "\n",
-    "# z-score test\n",
+    "# Z-score test\n",
     "mean = df['Lufttemperatur'].mean()\n",
     "std = df['Lufttemperatur'].std()\n",
     "\n",
+    "# Calculate z-score\n",
     "z_score = (df['Lufttemperatur'] - mean) / std\n",
     "\n",
+    "# Set threshold of 3 standard deviations\n",
     "threshold = 3\n",
     "\n",
+    "# Save outliers and print\n",
     "outliers = df[abs(z_score) > threshold]\n",
     "\n",
     "print(\"Outliers: \", len(outliers))\n",
     "\n",
-    "# anomalies\n",
+    "\n",
+    "# Code for detecting anomalies\n",
     "anomalies = []\n",
     "anomalies_t = []\n",
+    "prev_value = 2 # first value\n",
+    "rows = len(df['Lufttemperatur']) - 1\n",
     "\n",
-    "prev_value = 2\n",
-    "for i in range(len(df['Lufttemperatur']) - 1):\n",
-    "    if abs(df.iat[i, 1] - prev_value) > 7:\n",
+    "# Compare every temperature to the previous and the next to see if it sticks out\n",
+    "for i in range(rows):\n",
+    "    if i != rows:\n",
+    "        next_value = df.iat[i+1, 1]\n",
+    "\n",
+    "    if abs(df.iat[i, 1] - (prev_value + next_value) / 2) > 7:\n",
     "        anomalies.append(df.iat[i, 1])\n",
     "        anomalies_t.append(df.iat[i, 0])\n",
-    "        print(df.iat[i, 1], ' - ', prev_value)\n",
-    "        print(abs(df.iat[i, 1] - prev_value))\n",
-    "        print(df.iat[i, 0])\n",
+    "\n",
     "    prev_value = df.iat[i, 1]\n",
     "\n",
-    "print(len(anomalies))\n"
+    "# Save anomalies in a dataframe and print\n",
+    "anomaly_df = pd.DataFrame({'Time': anomalies_t, 'Lufttemperatur' : anomalies})\n",
+    "\n",
+    "print(anomaly_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We checked for both outliers (unusually hot or cold temperatures) and possible faulty measurements. We used the z-score test and managed to find 205 outliers with a value more than 3 standard deviations from the mean. We also found 85 values that made a jump of more than 7 degrees in one hour, which we assume to be faulty measurements."
    ]
   },
   {
