--- a/a1/book.ipynb
+++ b/a1/book.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "[122856 rows x 3 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
     "#### Q1\n",
     "**Explain the data cleaning steps you consider for analyzing the provided dataset. You must motivate and describe why, how, and in which order you are going to apply the selected steps to the dataset. Note that you should consider applying your proposed data cleaning steps on the dataset to answer Q2-Q11.**\n",
     "\n",
-    "Firstly we will look at the dataset and remove all duplicates in it. Then we want to remove all the missing values. Some missing values have an entry in the csv-file, but is missing the temperature data, while some timestamps are not found at all in the data. The strategy here is to insert all timestamps that are missing, with no temperature data, and then add an estimated temperature for every missing instance."
+    "Firstly we will look at the dataset and remove all duplicates in it. Then we want to deal with all the missing values. Some missing values have an entry in the csv-file, but is missing the temperature data, while some timestamps are not found at all in the data. The strategy here is to insert all timestamps that are missing, with no temperature data. The last step is to add an estimated temperature for every instance with a missing temperature."
    ]
   },
   {
@@ -208,14 +208,14 @@
     "#### Q2\n",
     "**Does the dataset contain any missing values? If so, how many in both absolute terms and percentages? Reflect on the number of missing values. Do you regard it as much or not?**\n",
     "\n",
-    "Yes, yes.\n",
+    "Between the first and last row in the dataset, 694 timestamps were missing. With those added (without a temperature), there were 7931 instances that without temperature data. That corresponds to 6.54 percent of the dataset. We do consider the amount of missing values to be fairly high, but it's not high enough for it to be a big issue. \n",
     "\n",
     "***\n",
     "\n",
     "#### Q3\n",
     "**Which strategy was used for handling the missing values? Motivate why you consider the selected strategy the most suitable for this task.**\n",
     "\n",
-    "Good strategy.\n",
+    "We chose to estimate missing values rather than removing them. One reason for that is to try to keep the mean value as correct as possible. We used pandas.DataFrame.interpolate to replace the missing temperature values. It's a function that estimates the values linearly based on neighboring values. It is suitable for this since we have a time series with an instance every hour.\n",
     "\n",
     "***\n",
     "\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -529,20 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outliers:  205\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Outliers:  205\n",
       "                  Time  Lufttemperatur\n",
       "0  2010-07-11 09:00:00            34.1\n",
       "1  2010-07-11 18:00:00            35.2\n",
@@ -619,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
