--- a/a1/book.ipynb
+++ b/a1/book.ipynb
@@ -5,14 +5,19 @@
    "metadata": {},
    "source": [
     "## DV1597 Assignment 1\n",
+    "Group 9\n",
     "\n",
-    "Namn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "***\n",
+    "Viktor Fransson\n",
+    "\n",
+    "vifr22@student.bth.se\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Tobias Gustafsson\n",
+    "\n",
+    "togu22@studen.bth.se\n",
     "***"
    ]
   },
@@ -20,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize"
+    "#### Load Data"
    ]
   },
   {
