--- a/a2/book.ipynb
+++ b/a2/book.ipynb
@@ -1794,7 +1794,8 @@
     "\n",
     "# Plotting the merged data, coloring countries based on cases or deaths\n",
     "cases_map.plot(column='cases', cmap='coolwarm', linewidth=0.8, edgecolor='0.8', legend=True)\n",
-    "deaths_map.plot(column='deaths', cmap='Reds', linewidth=0.8, edgecolor='0.8', legend=True)"
+    "deaths_map.plot(column='deaths', cmap='Reds', linewidth=0.8, edgecolor='0.8', legend=True)\n",
+    "# print()"
    ]
   },
   {
