--- a/a2/book.ipynb
+++ b/a2/book.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "[28729 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "[681330 rows x 18 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "[25100 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -925,32 +925,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "30\n",
+      "Cyprus\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "\"None of [''] are in the columns\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m df_fin \u001b[38;5;241m=\u001b[39m df_vaccination\u001b[38;5;241m.\u001b[39mloc[df_vaccination[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReportingCountry\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m c[\u001b[38;5;241m0\u001b[39m]]\n\u001b[0;32m     10\u001b[0m df_fin \u001b[38;5;241m=\u001b[39m df_fin\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTargetGroup\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFirstDose\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[1;32m---> 11\u001b[0m \u001b[43mdf_fin\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_index\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAge<18\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m df_fin[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTargetGroup\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(name_dict\u001b[38;5;241m.\u001b[39mget(cc))\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\pandas\\core\\frame.py:6122\u001b[0m, in \u001b[0;36mDataFrame.set_index\u001b[1;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[0;32m   6119\u001b[0m                 missing\u001b[38;5;241m.\u001b[39mappend(col)\n\u001b[0;32m   6121\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m missing:\n\u001b[1;32m-> 6122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmissing\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m are in the columns\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6124\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[0;32m   6125\u001b[0m     frame \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"None of [''] are in the columns\""
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TargetGroup</th>\n",
+       "      <th>FirstDose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ALL</td>\n",
+       "      <td>631315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Age0_4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Age10_14</td>\n",
+       "      <td>16558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Age15_17</td>\n",
+       "      <td>16721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Age18_24</td>\n",
+       "      <td>63981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Age25_49</td>\n",
+       "      <td>285900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Age50_59</td>\n",
+       "      <td>94887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Age5_9</td>\n",
+       "      <td>4512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Age60_69</td>\n",
+       "      <td>87508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Age70_79</td>\n",
+       "      <td>65398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Age80+</td>\n",
+       "      <td>33723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AgeUNK</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>HCW</td>\n",
+       "      <td>3668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>LTCF</td>\n",
+       "      <td>46400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TargetGroup  FirstDose\n",
+       "0          ALL     631315\n",
+       "1       Age0_4          3\n",
+       "2     Age10_14      16558\n",
+       "3     Age15_17      16721\n",
+       "4     Age18_24      63981\n",
+       "5     Age25_49     285900\n",
+       "6     Age50_59      94887\n",
+       "7       Age5_9       4512\n",
+       "8     Age60_69      87508\n",
+       "9     Age70_79      65398\n",
+       "10      Age80+      33723\n",
+       "11      AgeUNK          0\n",
+       "12         HCW       3668\n",
+       "13        LTCF      46400"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  TargetGroup  FirstDose\n",
+      "1      Age0_4          3\n",
+      "  TargetGroup  FirstDose\n",
+      "7      Age5_9       4512\n",
+      "  TargetGroup  FirstDose\n",
+      "2    Age10_14      16558\n",
+      "  TargetGroup  FirstDose\n",
+      "3    Age15_17      16721\n"
      ]
     }
    ],
    "source": [
     "df_vaccination = df_vaccination_original.copy()\n",
     "df_vaccination = df_vaccination.drop(df_vaccination[df_vaccination['Region'] != df_vaccination['ReportingCountry']].index)\n",
+    "u18_list = ['Age0_4', 'Age5_9', 'Age10_14', 'Age15_17']\n",
     "\n",
     "# Country group\n",
     "df_cg = df_vaccination.groupby('ReportingCountry')\n",
@@ -959,10 +1084,15 @@
     "    cc = c[0]\n",
     "    df_fin = df_vaccination.loc[df_vaccination['ReportingCountry'] == c[0]]\n",
     "    df_fin = df_fin.groupby('TargetGroup')['FirstDose'].sum().reset_index()\n",
-    "    df_fin.set_index('')\n",
-    "    if 'Age<18' not in df_fin['TargetGroup'].values:\n",
+    "    if 'Age<18' not in df_fin['TargetGroup'].values:        \n",
     "        print(name_dict.get(cc))\n",
     "        display(df_fin)\n",
+    "        for group in u18_list:\n",
+    "            if group in df_fin.values:\n",
+    "                row = df_fin.loc[df_fin['TargetGroup'] == group]\n",
+    "                print(row[''])\n",
+    "        \n",
+    "        break\n",
     "    \n"
    ]
   },
@@ -2553,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
